[metadata]
name = hisa
version = 0.1.1
author = rivo2302
author_email = rivo.rajaonarivony@esti.mg
description = Python module that translates a number into Malagasy🇲🇬  letters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rivo2302/Hisa
project_urls =
    Bug Tracker = https://github.com/rivo2302/Hisa/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 2.7